--- a/quantum_error_project/qerr_proj.tex
+++ b/quantum_error_project/qerr_proj.tex
@@ -35,7 +35,7 @@
     \end{oldthebibliography}%
   }
 
- \title{Research Proposal:\\ Quantum Error Correction using Periodically Driven Nonequilibrium Dynamics }
+ \title{Research Proposal:\\ Quantum Error Correction from Periodically Driven Nonequilibrium Dynamics }
  \author{Analabha Roy\\Postdoctoral Fellow\\National Institute for Theoretical Physics (NiTheP), Wallenberg Research Centre\\10 Marais Street, Stellenbosch, South Africa}
  \date{\today}
 
