--- a/dst_ramanujan_project/dst_ramanujan.tex
+++ b/dst_ramanujan_project/dst_ramanujan.tex
@@ -28,8 +28,8 @@
 \hoffset=-0.5cm
 \textheight=26cm
 %\textwidth=17cm
-\headheight=14pt
-\textwidth=18cm
+\headheight=10pt
+\textwidth=18.4cm
 \oddsidemargin=0pt
 \evensidemargin=0pt
 
@@ -124,7 +124,7 @@ The next phase of the project will involve breaking integrability in the Kitaev 
 The next phase of the project will involve  open quantum systems, where the reduced density matrix is evolved in time by a master equation, allowing for the inclusion of incoherent processes which represent interactions with a reservoir. Such dynamics is regularly studied in quantum optics using the \textbf{Kossakowski-Lindblad equation}, where it can represent absorption or emission from a reservoir~\cite{lindblad}. Here, the regular Liouvillean dynamics of closed quantum density matrices are dressed with Lindblad bath operators which act locally on degrees of freedom near each bath. Although this approach is not universally valid, it is a reasonable starting point to study radiative systems such as the ones being studied in this project.  This approach is computationally simpler, and the density matrix for such a mixed system can be solved using phase space methods detailed below.
 
 The final part of this project will deal with the physics of quantum information propagation in nonintegrable many body systems, and determining if the phenomenologies associated with periodically driving a many body system such as a quantum logic gate, can allow for
-controlling and directing the outcome of quantum logic gates. This leads to the possibility of eliminating the degradation of quantum information, either due to isolated bit flips or due to decoherence induced by thermalization or coupling to the external environment.  The realization of quantum error correction in the manner described above is not obvious currently, since entangled qubit states may have unusual responses to driven dynamics that have not been studied so far. This final phase  involves the study of complex many body logic gates realized by interacting quantum magnets. Each magnet, capable of storing a single qubit, interacts with its neighbours via amplitude hopping, as well as repulsive pseudopotentials. These interactions can be modeled in various ways, and our focus will be on one dimensional Ising-like spins with nearest neighbour as well as long range interactions. 
+controlling and directing the outcome of quantum logic gates. This leads to the possibility of eliminating the degradation of quantum information, either due to isolated bit flips or due to decoherence induced by thermalization or coupling to the external environment.  The phenomenon of Dynamical Many Body freezing as described in the paragraph above can induce effective single particle behavior even in a complex many body system, and interference in the dynamics leads to the  cancellation of all transition amplitudes, freezing out all errors that may arise due to decoherence dynamics~\cite{freezing}. The realization of quantum error correction in the manner described above is not obvious currently, since entangled qubit states may have unusual responses to driven dynamics that have not been studied so far. This final phase  involves the study of complex many body logic gates realized by interacting quantum magnets. Each magnet, capable of storing a single qubit, interacts with its neighbours via amplitude hopping, as well as repulsive pseudopotentials. These interactions can be modeled in various ways, and our focus will be on one dimensional Ising-like spins with nearest neighbour as well as long range interactions. 
 
 Our studies will require the use of extensive analytical and numerical techniques which are described in the sections below. My own interest in nonequilibrium dynamics stems from my undergraduate years, and I have been working with great passion in this field throughout my graduate and postdoctoral years. I have worked with many luminaries in this area, both in India as well as in the United States, and have developed an extensive network of academics who work in nonequilibrium dynamics. The opportunity offered by this fellowship will give me the ability to achieve the goals described above much more efficiently. I will present the results in national and international conferences in the BRICS countries, Europe, North America and East-Southeast Asia. I should also be able to host frequent academic visits of my colleagues to my host institute, as well as get funding for academic visits of my own to them. I will deliver seminars that will increase interest in this area among undergraduate and graduate students, attracting potential research collaborators.  Given the importance that many academics, as well as people in the industry and government, attach to the prospects of quantum computing and nonequilibrium dynamics, this research project will help keep my host at the final frontier of modern technology.
  
@@ -147,7 +147,9 @@ in quantum ergodicity, quench dynamics , critical phenomena and localization in 
 \section{Transfer of Knowledge}
 With the proposed project, I will bring several sorts of unique knowledge to the host institute. First, I will bring my extensive expertise in numerical methods, developed over the course of my graduate studies at the University of Texas, as well as my various postdoctoral appointments in India and abroad.  My knowledge of several paradigms in parallel computing, such as multithreading, message passing, OpenCL and computing using graphical processors, as well as scripting for parallel grid engines, will ensure that numerical work is done in a timely and efficient manner, optimally utilizing the computational resources available at the host in order to solve the problems detailed in this proposal.
 
-Second, I will also bring my extensive knowledge of condensed matter theory, many body physics, nonequilibrium field theory, nonlinear dynamics, dynamical systems and chaos to the host. My knowledge of these topics have developed under the guidance of several leaders in their respective fields in the United States and India, such as Prof L.E. Reichl (The transition to Chaos in classical and quantum systems), Prof J.K. Bhattacharjee (Nonlinear Dynamics), Prof. Krishnendu Sengupta (Nonequilibrium Field Theory), Dr. Arnab Das (Dynamics of many particle systems), Prof. Michael Kastner (Condensed Matter Theory) and others. My theoretical background encompasses numerous topics, such as  Floquet theory, Keldysh theory as applied to the Fermi BCS problem, Bose Einstein Condensates and the time dependent Gross-Pitaevski Bogoliubov equations and the study of excitations therein, and others. All of this knowledge will be brought to the host organization and group and shared with colleagues, graduate students and other postdocs.
+Second, I will also bring my extensive knowledge of condensed matter theory, many body physics, nonequilibrium field theory, nonlinear dynamics, dynamical systems and chaos to the host. My knowledge of these topics have developed under the guidance of several leaders in their respective fields in the United States and India, such as Prof L.E. Reichl (The transition to Chaos in classical and quantum systems), Prof J.K. Bhattacharjee (Nonlinear Dynamics), Prof. Krishnendu Sengupta (Nonequilibrium Field Theory), Dr. Arnab Das (Dynamics of many particle systems), Prof. Michael Kastner (Condensed Matter Theory) and others. My theoretical background encompasses numerous topics, such as  Floquet theory~\cite{floquet}, Keldysh theory as applied to the Fermi BCS problem~\cite{bcs}, Bose Einstein Condensates and the time dependent Gross-Pitaevski Bogoliubov equations and the study of excitations therein, and others. All of this knowledge will be brought to the host organization and group and shared with colleagues, graduate students and other postdocs.
+
+Thirdly, my desire to pursue this research project at Bose Institute in Kolkata stems from the presence therein of several luminaries in the field of quantum information and computing, such as Profs. Dipankar Home and Somshubhro Bandyopadhyay. I have already corresponded with both physicists regarding this project, and anticipate extensive interactions and collaborations towards a prescription for quantum error correction with periodic drives.
 
 Finally, I have made plans to enhance existing collaborations with colleagues in order to expedite the research work detailed in this proposal. Collaborators include  Profs. Michael Kastner  (National Institute for Theoretical Physics and University of Stellenbosch, South Africa), Prof. Romain Bachelard (Centro de Pesquisa em Optica e Fotonica, Sao Carlos, Brazil)  , Prof  John J. Bollinger (National Institute of Standards and Technology, Boulder, CO USA), and others. These collaborations will help bring the knowledge and expertise gained by the collaborators from abroad into India via interactions with myself. In addition, the conferences  mentioned in the previous subsection will also be attended by most condensed matter and statistical physicists in the world, and lectures and unofficial interactions therein will further disseminate expertise accordingly.
 
@@ -176,29 +178,33 @@ J. Schachenmayer, A. Pikovski, and A. M. Rey, Phys. Rev. X {\bf 5}, 011022 (2015
 \bibitem{bbgky}
 M. Bonitz, Quantum Kinetic Theory (Teubner, Stuttgart, 1998); L. Pucci, A. Roy, M. Kastner, arXiv:1510.03768.
 
-\bibitem{kitaev-seminal}
-A. Kitaev, Ann. Phys. {\bf 321} 2, (2006).
 
 \bibitem{kitaev}
 A. Polkovnikov, K. Sengupta, A. Silva, M. Vengalattore, Rev. Mod. Phys. \textbf{83}, 863 (2011); A. Dutta, U. Divakaran, D. Sen, B. K. Chakrabarti, T. F. Rosenbaum, and G. Aeppli, arXiv:1012.0653 (2010).
 
-\bibitem{kitaev-majorana}
-Feng, Zhang and Xiang, Phys. Rev. Lett. {\bf 98} 087204 (2007); Lee, Zhang and Xiang, Phys. Rev. Lett. {\bf 99} 196805 (2007); Chen and Nussinov, J. Phys. A {\bf 41} 075001 (2008).
+
+\bibitem{kitaev-seminal}
+A. Kitaev, Ann. Phys. {\bf 321} 2, (2006).
+
+%\bibitem{kitaev-majorana}
+%Feng, Zhang and Xiang, Phys. Rev. Lett. {\bf 98} 087204 (2007); Lee, Zhang and Xiang, Phys. Rev. Lett. {\bf 99} 196805 (2007); Chen and Nussinov, J. Phys. A {\bf 41} 075001 (2008).
 
 \bibitem{bollinger}
 J. W. Britton,	B. C. Sawyer,	A. C. Keith,	C.-C. Wang,	J. K. Freericks, H. Uys,	M.l J. Biercuk, and J. J. Bollinger, Nature {\bf 484}, 489-492 (2012).
 
-\bibitem{lindblad}
-A. Kossakowski, Rep. Math. Phys. {\bf 3} 247 (1972); G. Lindblad , Commun. Math. Phys. {\bf 48} 119 (1976).
 
-\bibitem{relaxation}
-W. H. Zurek, U. Dorner, and P. Zoller, Phys. Rev. Lett. {\bf 95}, 105701 (2005).
+%\bibitem{relaxation}
+%W. H. Zurek, U. Dorner, and P. Zoller, Phys. Rev. Lett. {\bf 95}, 105701 (2005).
 
 \bibitem{lr}
 E. H. Lieb and D. W. Robinson, Commun. Math. Phys. {\bf 28}, 251 (1972).
 
 \bibitem{michael}
 M. van den Worm, B. C Sawyer, J. J Bollinger and M. Kastner, New Journal of Physics {\bf 15} (8) 083007 (2013); J. Eisert, M. van den Worm, S. R. Manmana, and M. Kastner, Phys. Rev. Lett. {\bf 111}, 260401 (2013); K. R. A. Hazzard, M. van den Worm, M. Foss-Feig, S. R. Manmana, E. G. Dalla Torre, T. Pfau, M. Kastner, and A. M. Rey, Phys. Rev. A {\bf 90}, 063622 (2014).
+
+
+\bibitem{lindblad}
+A. Kossakowski, Rep. Math. Phys. {\bf 3} 247 (1972); G. Lindblad , Commun. Math. Phys. {\bf 48} 119 (1976).
 
 \bibitem{white:pdmrg}
 E. M. Stoudenmire and S. R. White, Phys. Rev. B {\bf 87}, 155137 (2013).
@@ -212,6 +218,11 @@ Breuer, Heinz-Peter; F. Petruccione. \textit{The Theory of Open Quantum Systems}
 \bibitem{krishrev}
 A. Polkovnikov, K. Sengupta, A. Silva, M. Vengalattore, Rev. Mod. Phys. \textbf{83}, 863 (2011).
 
+\bibitem{floquet} 
+A. Roy and L.E. Reichl:  Physica {E}, {\bf 42}, 1627-1632 (2010); Phys. Rev. {A} {\bf 77}, 033418 (2008).
+
+\bibitem{bcs}
+A.Roy, R. Dasgupta, S. Modak, A.Das, and K. Sengupta, J. Phys.: Condens. Matter, {\bf 25}, 205703 (2013).
 
 \end{thebibliography}
 
