--- a/dst_ramanujan_project/dst_ramanujan.tex
+++ b/dst_ramanujan_project/dst_ramanujan.tex
@@ -24,6 +24,9 @@
 %\usepackage[margin=0.5in]{geometry}
 
 \usepackage{hyperref}
+\usepackage{url}
+\usepackage{color,soul}
+\usepackage{bm}
 \voffset=-2.5cm
 \hoffset=-0.5cm
 \textheight=26cm
@@ -65,9 +68,23 @@
   {%
     \end{oldthebibliography}%
   }
-
+\newenvironment{list1}{
+  \begin{list}{\ding{113}}{%
+      \setlength{\itemsep}{0in}
+      \setlength{\parsep}{0in} \setlength{\parskip}{0in}
+      \setlength{\topsep}{0in} \setlength{\partopsep}{0in} 
+      \setlength{\leftmargin}{0.17in}}}{\end{list}}
+\newenvironment{list2}{
+  \begin{list}{$\bullet$}{%
+      \setlength{\itemsep}{0in}
+      \setlength{\parsep}{0in} \setlength{\parskip}{0in}
+      \setlength{\topsep}{0in} \setlength{\partopsep}{0in} 
+      \setlength{\leftmargin}{0.2in}}}{\end{list}}
+\renewcommand*{\thefootnote}{\fnsymbol{footnote}}
+      
 \begin{document}
 % \maketitle
+
 
 \phantom{a}
 \vspace{15mm}
@@ -105,9 +122,195 @@
 \vspace{1cm}
 
 \pagebreak
+\begin{center}
+\textul{Nomination letter format for Ramanujan Fellowship}
+\end{center}
+To,\\
+\begin{list1}
+\item[] {\bf The Secretary,}
+\item[] {\bf Science \& Engineering Research Board (SERB),}
+\item[] {\bf 5 \& 5A, Lower Ground Floor,}
+\item[] {\bf Vasant Square Mall,}
+\item[] {\bf Vasantkunj,}
+\item[] {\bf New Delhi 110 070}\\
+\end{list1}
 
+I wish to nominate {\bf Dr. Analabha Roy} for Ramanujan Fellowship of SERB, Department of Science \& Technology, New Delhi, who is presently working at {\bf The National Institute for Theoretical Physics, Stellenbosch, South Africa}, and is not employed in India. This is to certify\footnote{The institute/ University are expected to have their own selection mechanism to decide the criteria for selection and apply the same before forwarding the
+application for the Ramanujan fellowship} that if the fellowship is offered to {\bf Dr. Analabha Roy}, the institute will provide office and laboratory space along with the necessary facilities to carry out research described in the proposed project. The institute has carried out internal evaluation of the applicant before forwarding the application for the government's prestigious fellowship\footnote{This fellowship is meant for working in new areas and laboratories in order to expand their research capabilities, other than the one where the candidate obtained the doctorate degree from.}.\\
+
+\begin{flushright}
+{\raggedright{}
+\begin{list1}
+\item[]Date :
+\item[]Name:
+\item[]Place:
+\item[]Signature of the Director of the Institute:
+\item[]
+\item[]
+\item[]
+\item[]
+\item[]
+\item[]
+\item[]
+\item[]Seal of the Institute:
+\item[]
+\item[]
+\item[]
+\item[]
+\item[]
+\item[]
+\end{list1}}
+\end{flushright}
+\vspace{1.5in}
+(Nominations must be sent only by Head of the organization/ Institute/ University or
+the person authorized by Head of the organization/ Institute / University, since this is
+an academic position)
+
+\pagebreak
+\section{\sc Broad Subject Area:}
+Physical Sciences
+
+\section{\sc Area of Specialization:} 
+Theoretical Condensed Matter Physics
+
+\section{\sc Name of the Candidate:} 
+Dr. Analabha Roy
+
+\section{\sc Contact Information:		}
+\vspace{.05in}
+\begin{tabular}{@{}p{2.5in}p{4in}}
+
+National Institute for Theoretical Physics, \\
+Wallenberg Research Centre,\\
+Private Bag X1, \\
+Matieland,& {\it E-mails:}  daneel@utexas.edu , daneel@sun.ac.za\\
+Stellenbosch $7602$, South Africa & {\it WWW:} \url{http://www.ph.utexas.edu/\~daneel}  \\
+Ph: +27218082649 \\
+Fax: +27218083862 \\
+\end{tabular}
+\section{\sc Date of Birth:			}
+March $21$, $1978$
  
-\section{Background and Description }
+\section{\sc Educational Qualifications:}
+
+{\bf Jadavpur University}, Calcutta, West Bengal INDIA\\
+%{\em Department of Physics} 
+\vspace*{-.2in}
+\begin{list1}
+\item[] Bachelor of Science, First Class in Physics with 
+\item[] Honors  (Distinction in subsidiaries, Maths and Chemistry),  July 1997 to July 2000
+\end{list1}
+{\bf Indian Institute of Technology}, Kanpur, Uttar Pradesh INDIA\\
+%{\em Department of Physics} 
+\vspace*{-.2in}
+\begin{list1}
+\item[] Master of Science, Physics ,  July 2000 to May 2002
+\end{list1}
+{\bf University of Texas at Austin}, Austin, Texas, USA\\
+%{\em Department of Physics} 
+\vspace*{-.2in}
+\begin{list1}
+\item[] Doctor of Philosophy (Ph.D), Physics, August 2002 - May 2009
+\item[] Advisor:  Linda E. Reichl
+\item[] Thesis Title: Dynamics of Quantum Control in Cold-Atom Systems
+\item[] Thesis Link: \url{http://catalog.lib.utexas.edu/record=b7270815~S2}
+\end{list1}
+
+\section{\sc Research Experience}
+
+\subsection{Details of Professional Training and Research Experience}
+\begin{tabular}{|l|l|l|l|}
+\hline
+S. No. & Specifying Period                  & Designation                             & Affiliation\\
+\hline
+1      & Spring 2015 - Present              & Postdoctoral Fellow		      & National Institute for\\ 		&				    &					      & Theoretical Physics, \\
+	&				    &					      & Stellenbosch, South Africa\\ 	
+\hline
+1      & Autumn 2011 - Autumn 2014          & C.S.I.R. Senior 	                      & T.C.M.P, Saha Institute\\
+       &                                    & Research Associate                                  & of Nuclear Physics,  \\
+       &                                    &                                         &  Kolkata,\\         
+       &                                    &                                         & India \\
+\hline
+1      & Autumn 2009 - Autumn 2011          & Postdoctoral Research                   & S.N. Bose National\\
+       &                                    & Fellow                                  & Centre for Basic  \\
+       &                                    &                                         & Sciences, Kolkata,\\         
+       &                                    &                                         & India \\
+\hline
+2      & Summer 2009                        & Postdoctoral Research                   &Center for Complex\\
+       &                                    & Associate                               &Quantum Systems, \\
+       &                                    &                                         &University of Texas at Austin,\\
+       &                                    &                                         &Austin, TX, USA\\
+\hline
+3      & Fall 2005                          & Graduate Research                       &Center for Complex\\
+       & Spring 2006 - Summer 2007          & Assistant                               &Quantum Systems, \\
+       &                                    &                                         &University of Texas at Austin,\\
+       &                                    &                                         &Austin, TX, USA\\
+\hline        
+4      & Spring 2002                        & M.Sc Research Project                   &Indian Institute of\\
+       &                                    &                                         &Technology, Kanpur \\
+       &                                    &                                         &India \\
+\hline
+5      & Summer 2001                        & Vacation Students Program               &Inter-University \\
+       &                                    &                                         &Centre for Astronomy\\
+       &                                    &                                         &and Astrophysics, \\
+       &                                    &                                         &Pune, India\\
+\hline
+6      & 1998 - 2000                        & Undergraduate Research                  &Jadavpur University\\
+       &                                    & Project                                 &Kolkata, India\\
+\hline
+\end{tabular} 
+\subsection{Publications}
+\begin{enumerate}
+\item
+L. Pucci, \textbf{A. Roy}, and M. Kastner\footnote{\large{\hl{Corresponding Author}}}, '\textit{Simulation of Quantum Spin Dynamics by Phase Space Sampling of BBGKY Trajectories}'. In review; available at arXiv:1510.03768 (2015).
+\item
+\textbf{A. Roy} and A. Das\footnotemark[\value{footnote}] '\textit{Fate of dynamical many-body localization in the presence of disorder}', Phys. Rev. B, {\bf 91}, 121106(R) (2015).
+\item
+\textbf{A. Roy}\footnotemark[\value{footnote}], '\textit{Nonequilibrium Dynamics of Ultracold Fermi Superfluids}', Invited mini-review (NCNSD $2012$),
+Eur. Phys. J. ST, {\bf 222} (3-4), 975-993 (2013).
+\item
+\textbf{A. Roy}\footnotemark[\value{footnote}] , R. Dasgupta, S. Modak, A.Das, and K. Sengupta, '\textit{ Periodic dynamics of fermionic superfluids in the bcs regime}',  J. Phys.: Condens. Matter, {\bf 25}, 205703 (2013).
+\item
+\textbf{A. Roy}\footnotemark[\value{footnote}] , '\textit{Dynamics of quantum quenching for BCS-BEC systems in the shallow BEC regime}', Eur. Phys. J. {Plus}, {\bf 127}:3, 34 (2012).
+ \item 
+\textbf{A. Roy} and L.E. Reichl\footnotemark[\value{footnote}], '\textit{Quantum Control  of Interacting Bosons in Periodic Optical Lattice}',Physica {E}, {\bf 42}, 1627-1632 (2010).
+\item
+\textbf{A. Roy} and L.E.Reichl\footnotemark[\value{footnote}], '\textit{Coherent Control of Trapped Bosons}', Phys Rev {A} {\bf 77}, 033418 (2008).
+\item
+\textbf{A. Roy} and J.K. Bhattacharjee\footnotemark[\value{footnote}],'\textit{Chaos in the Quantum Double Well Oscillator: The Ehrenfest View Revisited}' Phys. Lett. {A}, {\bf 288}/1-3 (2001).
+\end{enumerate}
+ 
+\subsection{Papers in Preparation:}
+\begin{enumerate}
+\item
+R. Bachelard, L. Pucci,\textbf{ A. Roy} and M. Kastner, '\textit{Propagation of dipole excitations and quantum correlations in a cold atomic cloud}'
+\item
+L.Pucci, and \textbf{A. Roy}, '\textit{Kinetic theory for long-range quantum spin models}'.
+\item
+\textbf{A. Roy} and A. Das, '\textit{Persistence of single oscillations in periodically driven disordered quantum magnets}'.
+\item
+A. Das and \textbf{A. Roy}, '\textit{Dynamical localization in the exact dynamics of periodically driven systems of interacting fermions}'.
+\end{enumerate}
+
+\section{\sc Details of employment:}
+
+\section{\sc Professional recognitions, awards, fellowships received}
+\begin{enumerate}
+\item
+Scored \textbf{$\bm{1^{st}}$ rank nationwide} (India) in the \textbf{National Eligibility Test} for Lectureship held jointly by the University Grants Commission and the Council of Scientific and Industrial Research (CSIR-UGC NET) on July $17$, $2012$.
+\item
+Awarded the \textbf{Senior Research Associateship} (Scientists' Pool Scheme) from the Council of Scientific and Industrial Research (CSIR), Government of India, in $2011$.
+\item
+Awarded the \textbf{'Dr. D.S. Kothari Postdoctoral Fellowship in Sciences, Medical \& Engineering Sciences'} from the University Grants Commission (UGC) India, in $2011$.
+\item
+Scored $99.2162$ percentile nationwide ($\bm{17^{th}}$ \textbf{rank}) in the \textbf{Joint Entrance Screening Test} (JEST-$2002$) in Physics, $2002$ and scored $99.0000$ percentile nationwide ($\bm{9^{th}}$ rank) in JEST-$2000$.
+\item Awarded \textbf{Certificate of Merit} by the Indian Association of Physics Teachers (IAPT) for being placed in the Nationwide Top $1\%$ in the \textbf{National Graduates Physics Examination} (NGPE), $1997$.
+\end{enumerate}
+
+\pagebreak
+\section{\sc  Proposed area of research and brief outline of proposal}
+
+\subsection{Background and Description }
 \label{sec:sciTecQuality}
 
 The main objective of this research project is to investigate the onset of phase transitions and universal behavior of responses and correlations in nonintegrable quantum systems out of equilibrium. This is a particularly important aspect of nonequilibrium dynamics that has been realized in recent experiments. A quantum phase transition is a phase transition between different phases of matter at zero temperature, accessed by varying a physical parameter. The transition describes an abrupt change in the many-body quantum state due to its quantum fluctuations. Like their classical counterparts, quantum phase transitions are characterized by 'critical points', the end points of a phase equilibrium profile.  Critical phenomena describe the physics of these critical points, specifically phenomena associated with 
@@ -128,7 +331,7 @@ controlling and directing the outcome of quantum logic gates. This leads to the 
 
 Our studies will require the use of extensive analytical and numerical techniques which are described in the sections below. My own interest in nonequilibrium dynamics stems from my undergraduate years, and I have been working with great passion in this field throughout my graduate and postdoctoral years. I have worked with many luminaries in this area, both in India as well as in the United States, and have developed an extensive network of academics who work in nonequilibrium dynamics. The opportunity offered by this fellowship will give me the ability to achieve the goals described above much more efficiently. I will present the results in national and international conferences in the BRICS countries, Europe, North America and East-Southeast Asia. I should also be able to host frequent academic visits of my colleagues to my host institute, as well as get funding for academic visits of my own to them. I will deliver seminars that will increase interest in this area among undergraduate and graduate students, attracting potential research collaborators.  Given the importance that many academics, as well as people in the industry and government, attach to the prospects of quantum computing and nonequilibrium dynamics, this research project will help keep my host at the final frontier of modern technology.
  
-\section{Research Methodology and Approach}
+\subsection{ Research Methodology and Approach}
 \label{sec:research_methodology}
 
 The interdisciplinary nature of the project links it to  a diverse set of topics in theoretical physics, necessitating interaction between scientists from different disciplines.I am already experienced enough in the field of nonequilibrium many body dynamics. In addition, the basic framework for solving the quantum problem by BBGKY and Phase Space Sampling has been formulated by researchers I am currently working with (Dr. Lorenzo Pucci and Prof Michael Kastner of NiTheP, South Africa), as well as colleagues in the JILA group in Boulder, Colorado, USA (Dr. Johannes Schachenmeyer and Prof. Ana Maria Rey). The experimental setup for long range interacting spins has been readied by the group of Professor John Bollinger at NIST (Boulder, Colorado, USA).
@@ -137,14 +340,14 @@ The project involves a joint collaboration with the physicists mentioned above. 
 
 The physics of dissipation in quantum systems can also be modeled by a second approach using Lindblad operators. The ensuing Kossakowski-Lindblad dynamics  can be simulated numerically with novel approaches to the time evolved block decimation using the Density Matrix Renormalization Group technique, including the implementation of these algorithms in distributed grid computing environments using established parallel-programming paradigms~\cite{white:pdmrg}. In addition, I am currently working to refine the BBGKY-Phase Space method to open quantum systems. I plan to collaborate with Prof Michael Kastner of NiTheP Stellenbosh, as well as the experimental group of Prof. Romain Bachelard (Centro de Pesquisa em Optica e Fotonica, Sao Carlos, Brazil), and combine their expertise in this area to tackle this final part.
 
-\section{Relationship to the 'state of the art' of research in the field}
+\subsection{Relationship to the 'state of the art' of research in the field}
 \label{sec:originality}
 The study of Nonequilibrium dynamics of many body systems provides deep insights into several complex phenomena in nature, ranging from the behavior around phase transitions in bulk matter, biological systems,  to the creation of the known forces of the universe. In addition, studies in Quantum Annealing indicate that there is a very deep relationship between different aspects of quantum non-equilibrium dynamics and the basic limitations of a quantum computer~\cite{annealing}. Nonequilibrium dynamics of both closed and open quantum systems are an important part of quantum optics, quantum measurement theory, quantum statistical mechanics, quantum information science, quantum cosmology and semiclassical approximations~\cite{openq}. 
 
 Due to the many implications and interdisciplinary nature of nonequilibrium dynamics, a comprehensive study of phase transitions in the nonequilibrium dynamics  would provide insights into the behavior of several systems that are actively studied in academia. There is considerable interest in several research groups in this area. Nonintegrable many body systems with long range interactions are actively being studied using quantum simulators in the experimental groups of Prof Bollinger~\cite{bollinger} at NIST, Prof. R. Bachelard at Sao Carlos, Brazil (two of my ongoing collaborations are with these groups). In addition, considerable theoretical studies are being done 
 in quantum ergodicity, quench dynamics , critical phenomena and localization in nonintegrable systems by numerous groups in India (such as Profs Krishnendu Sengupta and Arnab Das of IACS Kolkata~\cite{krishrev,freezing}, Prof Amit Dutta of IIT Kanpur~\cite{kitaev}, Prof Diptiman Sen of IISc Bangalore, Prof. Rajdeep Sensarma of TIFR Mumbai etc.), as well as internationally (such as Prof. Anatoli Polkovnikov~\cite{kitaev} at Boston University, Prof. M. Rigol at Penn State, USA~\cite{thermalization}, Professor  Emanuele Dalla Torre at Bar-Ilan University, Israel~\cite{michael}, Prof. Kaden R.A. Hazzard at Rice University, Houston~\cite{michael} etc.). Thus, these studies will contribute to a fledgling area of research. 
 
-\section{Transfer of Knowledge}
+\subsection{ Transfer of Knowledge}
 With the proposed project, I will bring several sorts of unique knowledge to the host institute. First, I will bring my extensive expertise in numerical methods, developed over the course of my graduate studies at the University of Texas, as well as my various postdoctoral appointments in India and abroad.  My knowledge of several paradigms in parallel computing, such as multithreading, message passing, OpenCL and computing using graphical processors, as well as scripting for parallel grid engines, will ensure that numerical work is done in a timely and efficient manner, optimally utilizing the computational resources available at the host in order to solve the problems detailed in this proposal.
 
 Second, I will also bring my extensive knowledge of condensed matter theory, many body physics, nonequilibrium field theory, nonlinear dynamics, dynamical systems and chaos to the host. My knowledge of these topics have developed under the guidance of several leaders in their respective fields in the United States and India, such as Prof L.E. Reichl (The transition to Chaos in classical and quantum systems), Prof J.K. Bhattacharjee (Nonlinear Dynamics), Prof. Krishnendu Sengupta (Nonequilibrium Field Theory), Dr. Arnab Das (Dynamics of many particle systems), Prof. Michael Kastner (Condensed Matter Theory) and others. My theoretical background encompasses numerous topics, such as  Floquet theory~\cite{floquet}, Keldysh theory as applied to the Fermi BCS problem~\cite{bcs}, Bose Einstein Condensates and the time dependent Gross-Pitaevski Bogoliubov equations and the study of excitations therein, and others. All of this knowledge will be brought to the host organization and group and shared with colleagues, graduate students and other postdocs.
@@ -153,6 +356,17 @@ Thirdly, my desire to pursue this research project at Bose Institute in Kolkata 
 
 Finally, I have made plans to enhance existing collaborations with colleagues in order to expedite the research work detailed in this proposal. Collaborators include  Profs. Michael Kastner  (National Institute for Theoretical Physics and University of Stellenbosch, South Africa), Prof. Romain Bachelard (Centro de Pesquisa em Optica e Fotonica, Sao Carlos, Brazil)  , Prof  John J. Bollinger (National Institute of Standards and Technology, Boulder, CO USA), and others. These collaborations will help bring the knowledge and expertise gained by the collaborators from abroad into India via interactions with myself. In addition, the conferences  mentioned in the previous subsection will also be attended by most condensed matter and statistical physicists in the world, and lectures and unofficial interactions therein will further disseminate expertise accordingly.
 
+\section{\sc Name of the institution where the fellowship will be availed:}
+Bose Institute\\
+93/1, Acharya Prafulla Chandra Road\\
+Kolkata - 700009\\
+West Bengal, India\\ 
+Phone: (+91)(-33) 2350-2402/2403/ 6619/6702\\
+Fax: (+91)(-33) 2350-6790
+
+\section{\sc  Recommendation of the Institution:}
+\vspace{2in}
+\pagebreak
 \begin{thebibliography}{}
   
 \bibitem{thermalization}
